# assura

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSE-APACHE  MASTER-PLAN.md  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  deny.toml  dist-workspace.toml  lychee.toml  release-please-config.json
crates/assura-ast/: Cargo.toml
crates/assura-ast/src/: ast.rs  features.rs  lib.rs
crates/assura-ast/src/ast/: ast_tests.rs  display.rs  mod.rs
crates/assura-bench/: Cargo.toml
crates/assura-bench/benches/: compiler.rs  pipeline.rs
crates/assura-bench/src/: lib.rs
crates/assura-cli/: Cargo.toml
crates/assura-cli/src/: agent.rs  audit.rs  build.rs  check.rs  cli.rs  coverage.rs  diff.rs  doc.rs  fmt_cmd.rs  infer.rs  init.rs  ir_cmd.rs  ir_prompt_cmd.rs  legacy.rs  lib.rs  lsp_doctor.rs  main.rs  repl.rs  shared.rs  test_gen.rs  timing.rs
crates/assura-cli/src/check/: check_rust.rs  mod.rs  project.rs  report.rs  run.rs  rust_body_ir.rs  suggest_crash.rs  tests.rs  types.rs  watch.rs
crates/assura-cli/src/diff/: cmd.rs  mod.rs  tests.rs
crates/assura-cli/tests/: check_rust_body_ir.rs  cli_integration.rs  multi_block_ir_inject.rs
crates/assura-cli/tests/cli_integration/: check_rust_inline_contract_annotation_ve.rs  diff_86.rs  diff_verify_212.rs  i003_wasm_target_tests.rs  infer_heuristic_based_contract_inference.rs  ir_sidecar_pipeline_assura_check_loads_n.rs  issue_49_audit_command_integration_tests.rs  issue_96_agent_instructions_command_inte.rs  issue_96_completions_command_integration.rs  issue_96_coverage_command_integration_te.rs  issue_96_doctor_command_integration_test.rs  issue_96_explain_command_integration_tes.rs  mcp_server_89.rs  p001_verbose_and_quiet_mode_tests.rs  r007_build_cli_integration_tests.rs  repl_91.rs
crates/assura-cli/tests/common/: mod.rs
crates/assura-codegen/: Cargo.toml
crates/assura-codegen/src/: block.rs  codegen_tests.rs  contract.rs  contract_tests.rs  decl.rs  expr.rs  expr_tests.rs  features.rs  features_tests.rs  hir.rs  lib.rs  metadata.rs  service.rs  service_tests.rs  type_map.rs  types_gen.rs
crates/assura-codegen/src/codegen_tests/: basic.rs  contract.rs  ghost_lemma.rs  mod.rs  project.rs  remaining.rs  safe_division.rs  struct_enum.rs  type_mapping.rs
crates/assura-config/: Cargo.toml
crates/assura-config/src/: lib.rs  lib_tests.rs
crates/assura-diagnostics/: Cargo.toml
crates/assura-diagnostics/src/: catalog.rs  lib.rs  render.rs
crates/assura-driver/: Cargo.toml  README.md
crates/assura-driver/src/: main.rs
crates/assura-fmt/: Cargo.toml
crates/assura-fmt/src/: format_tests.rs  lib.rs
crates/assura-hir/: Cargo.toml
crates/assura-hir/src/: lib.rs  lower.rs
crates/assura-llm/: Cargo.toml
crates/assura-llm/src/: cache.rs  contract_db.rs  fuzz.rs  lemma.rs  lib.rs  prompt.rs  provider.rs  suggest.rs  types.rs
crates/assura-lsp/: Cargo.toml
crates/assura-lsp/src/: lib.rs  lsp_tests.rs  main.rs  symbols.rs  util.rs
crates/assura-macros/: Cargo.toml
crates/assura-macros/src/: lib.rs
crates/assura-macros/tests/: integration.rs
crates/assura-mcp/: Cargo.toml
crates/assura-mcp/src/: lib.rs
crates/assura-parser/: Cargo.toml
crates/assura-parser/fuzz/: Cargo.toml
crates/assura-parser/fuzz/fuzz_targets/: fuzz_parse.rs
crates/assura-parser/src/: ast.rs  cst.rs  display.rs  features.rs  lexer.rs  lib.rs  lower.rs  parser.rs  syntax_kind.rs
crates/assura-parser/src/grammar/: clauses.rs  expressions.rs  items.rs  mod.rs  params.rs
crates/assura-parser/src/lower/: clause.rs  decl.rs  expr.rs  lower_tests.rs  mod.rs  pattern.rs  types.rs
crates/assura-parser/tests/: service_colon_clause.rs  snapshots.rs
crates/assura-parser/tests/snapshots/: snapshots__bad_token_ast.snap  snapshots__bad_token_errors.snap  snapshots__duplicate_clause_ast.snap  snapshots__missing_brace_ast.snap  (+14 more)
crates/assura-pipeline/: Cargo.toml
crates/assura-pipeline/src/: lib.rs  lib_tests.rs
crates/assura-resolve/: Cargo.toml
crates/assura-resolve/src/: clause_names.rs  errors.rs  imports.rs  lib.rs  project.rs  resolve_tests.rs  symbols.rs  type_refs.rs  unused.rs
crates/assura-runtime/: Cargo.toml
crates/assura-runtime/src/: lib.rs
crates/assura-rust-analyzer/: Cargo.toml
crates/assura-rust-analyzer/src/: lib.rs  merge.rs  parse.rs  python.rs  ra_tests.rs  types.rs
crates/assura-server/: Cargo.toml  build.rs
crates/assura-server/proto/: assura.proto
crates/assura-server/src/: main.rs
crates/assura-smt/: Cargo.toml
crates/assura-smt/src/: advanced.rs  bmc.rs  bmc_tests.rs  cache.rs  clause_gate_policy.rs  clause_policy.rs  cvc5_adt.rs  cvc5_atom_encode.rs  cvc5_backend.rs  cvc5_builtins.rs  cvc5_call_encode.rs  cvc5_collect.rs  cvc5_common.rs  cvc5_encoder_state.rs  cvc5_expr_smtlib.rs  cvc5_feature_max.rs  cvc5_field_access.rs  cvc5_havoc_assume_smtlib.rs  cvc5_if_encode.rs  cvc5_ir_native.rs  cvc5_ir_smtlib.rs  cvc5_let_block_encode.rs  cvc5_match_encode.rs  cvc5_model.rs  cvc5_native_builtins.rs  cvc5_native_encoder.rs  cvc5_old_access.rs  cvc5_quantifier_encode.rs  cvc5_raw_encode.rs  cvc5_raw_native.rs  cvc5_raw_ops.rs  cvc5_raw_smtlib.rs  cvc5_tuple_encode.rs  cvc5_verify_dispatch.rs  cvc5_verify_native.rs  cvc5_verify_native_checks.rs  cvc5_verify_native_clause.rs  cvc5_verify_native_contract.rs  cvc5_verify_native_features.rs  cvc5_verify_native_solver.rs  (+64 more)
crates/assura-stdlib/: Cargo.toml
crates/assura-stdlib/src/: lib.rs
crates/assura-stdlib/std/: bytes.assura  collections.assura  crypto.assura  fs.assura  io.assura  iter.assura  math.assura  net.assura  option.assura  result.assura  string.assura  time.assura
crates/assura-types/: Cargo.toml
crates/assura-types/src/: CHECKER-LAYERS.md  checkers.rs  clauses.rs  convert.rs  domain.rs  env.rs  generics.rs  ghost_effects.rs  inference.rs  inference_tests.rs  lib.rs  pipeline.rs  tests.rs  types.rs
crates/assura-types/tests/: spec_compliance.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_lex.rs  fuzz_parse.rs  fuzz_typecheck.rs
(+723 files in other folders)
