[workspace]
members = ["crates/*"]
exclude = ["generated", "demos/generated", "fuzz", "crates/assura-parser/fuzz", "crates/assura-driver"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/assura-lang/assura"
homepage = "https://github.com/assura-lang/assura"
keywords = ["compiler", "contracts", "verification", "smt", "formal-methods"]
categories = ["compilers", "development-tools"]

[profile.dist]
inherits = "release"
lto = "thin"
