[package]
name = "assura-bench"
description = "Performance benchmarks for the Assura compiler pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-codegen = { path = "../assura-codegen" }
assura-smt = { path = "../assura-smt" }
assura-hir = { path = "../assura-hir" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline"
harness = false