[package]
name = "assura"
description = "Contract-first AI-native language. Write what it should do. AI proves it does."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "assura"
path = "src/main.rs"

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-codegen = { path = "../assura-codegen" }
assura-smt = { path = "../assura-smt" }
assura-hir = { path = "../assura-hir" }
assura-diagnostics = { path = "../assura-diagnostics" }
assura-config = { path = "../assura-config" }
logos = "0.15"
chumsky = "0.9"
ariadne = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
toml = "0.8"

[dev-dependencies]
syn = "2"
