[package]
name = "assura"
description = "Contract-first AI-native language. Write what it should do. AI proves it does."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "assura"
path = "src/lib.rs"

[[bin]]
name = "assura"
path = "src/main.rs"

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-codegen = { path = "../assura-codegen" }
assura-smt = { path = "../assura-smt" }
assura-hir = { path = "../assura-hir" }
assura-diagnostics = { path = "../assura-diagnostics" }
assura-config = { path = "../assura-config" }
assura-fmt = { path = "../assura-fmt" }
clap = { version = "4", features = ["derive"] }

serde_json = "1"
notify = "8"
toml = "1.1"
clap_complete = "4.6.5"
assura-lsp = { version = "0.1.0", path = "../assura-lsp" }
assura-mcp = { path = "../assura-mcp" }
assura-pipeline = { path = "../assura-pipeline" }
assura-rust-analyzer = { path = "../assura-rust-analyzer" }
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
tower-lsp = "0.20"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
