[package]
name = "assura"
description = "Contract-first AI-native language. Write what it should do. AI proves it does."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
# Co-published to crates.io (with frontends) so `cargo install assura` works.
# Also built by cargo-dist for GitHub Release installers.
[package.metadata.dist]
dist = true

[lib]
name = "assura"
path = "src/lib.rs"

[[bin]]
name = "assura"
path = "src/main.rs"

[dependencies]
assura-parser = { version = "0.2.0", path = "../assura-parser" }
assura-resolve = { version = "0.2.0", path = "../assura-resolve" }
assura-types = { version = "0.2.0", path = "../assura-types" }
assura-codegen = { version = "0.2.0", path = "../assura-codegen" }
assura-smt = { version = "0.2.0", path = "../assura-smt" }
assura-diagnostics = { version = "0.2.0", path = "../assura-diagnostics" }
assura-config = { version = "0.2.0", path = "../assura-config" }
assura-fmt = { version = "0.2.0", path = "../assura-fmt" }
clap = { version = "4", features = ["derive"] }

serde_json = "1"
notify = "8"
toml = "1.1"
clap_complete = "4.6.5"
assura-lsp = { version = "0.2.0", path = "../assura-lsp" }
assura-mcp = { version = "0.2.0", path = "../assura-mcp" }
assura-pipeline = { version = "0.2.0", path = "../assura-pipeline" }
assura-rust-analyzer = { version = "0.2.0", path = "../assura-rust-analyzer" }
assura-llm = { version = "0.2.0", path = "../assura-llm" }
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
tower-lsp = "0.20"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
