[package]
name = "assura-codegen"
description = "Rust code generation from type-checked Assura contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-ast = { version = "0.4.0", path = "../assura-ast" }
assura-resolve = { version = "0.4.0", path = "../assura-resolve" }
assura-types = { version = "0.4.0", path = "../assura-types" }
assura-parser = { version = "0.4.0", path = "../assura-parser" }
prettyplease = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "3", features = ["full", "parsing"] }

