[package]
name = "assura-config"
description = "Project configuration and output mode types for the Assura compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1"
