[package]
name = "assura-diagnostics"
description = "Unified diagnostic types for the Assura compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ariadne = "0.4"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
