[package]
name = "assura-fmt"
description = "Source code formatter for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-parser = { version = "0.3.0", path = "../assura-parser" }
rowan = "0.16"
