[package]
name = "assura-llm"
description = "LLM provider abstraction and contract analysis for Assura"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
assura-rust-analyzer = { path = "../assura-rust-analyzer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
reqwest = { version = "0.13", features = ["json", "rustls", "blocking"], default-features = false }
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"