[package]
name = "assura-llm"
description = "LLM provider abstraction and contract analysis for Assura"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-rust-analyzer = { version = "0.2.0", path = "../assura-rust-analyzer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
reqwest = { version = "0.13", features = ["json", "native-tls", "blocking"], default-features = false }
thiserror = "2"