[package]
name = "assura-lsp"
description = "LSP server for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "assura-lsp"
path = "src/main.rs"

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-fmt = { path = "../assura-fmt" }
assura-pipeline = { path = "../assura-pipeline" }
assura-config = { path = "../assura-config" }
assura-diagnostics = { path = "../assura-diagnostics" }
assura-rust-analyzer = { path = "../assura-rust-analyzer" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
ropey = "1"
