[package]
name = "assura-lsp"
description = "LSP server for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
[[bin]]
name = "assura-lsp"
path = "src/main.rs"

[dependencies]
assura-parser = { version = "0.4.0", path = "../assura-parser" }
assura-resolve = { version = "0.4.0", path = "../assura-resolve" }
assura-types = { version = "0.4.0", path = "../assura-types" }
assura-fmt = { version = "0.4.0", path = "../assura-fmt" }
assura-pipeline = { version = "0.4.0", path = "../assura-pipeline" }
assura-config = { version = "0.4.0", path = "../assura-config" }
assura-diagnostics = { version = "0.4.0", path = "../assura-diagnostics" }
assura-rust-analyzer = { version = "0.4.0", path = "../assura-rust-analyzer" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
ropey = "1"
