[package]
name = "assura-macros"
description = "Proc macros for inline Assura contract annotations in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[features]
## When enabled, contract checks use `assura_runtime::contract_violation()`
## instead of `debug_assert!()`. This makes checks persist in release builds
## with pluggable violation handlers (log, panic, webhook).
runtime-checks = []

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
assura-runtime = { path = "../assura-runtime" }
