[package]
name = "assura-mcp"
description = "MCP (Model Context Protocol) server for Assura AI agent integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-codegen = { path = "../assura-codegen" }
assura-smt = { path = "../assura-smt" }
assura-hir = { path = "../assura-hir" }
assura-diagnostics = { path = "../assura-diagnostics" }
assura-config = { path = "../assura-config" }
assura-pipeline = { path = "../assura-pipeline" }
assura-rust-analyzer = { path = "../assura-rust-analyzer" }
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
