[package]
name = "assura-mcp"
description = "MCP (Model Context Protocol) server for Assura AI agent integration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
assura-config = { path = "../assura-config" }
assura-codegen = { path = "../assura-codegen" }
assura-diagnostics = { path = "../assura-diagnostics" }
assura-pipeline = { path = "../assura-pipeline" }
assura-smt = { path = "../assura-smt" }
assura-rust-analyzer = { path = "../assura-rust-analyzer" }
rmcp = { version = "1.8", features = ["server", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
