[package]
name = "assura-parser"
description = "Lexer, parser, and AST for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
assura-diagnostics = { path = "../assura-diagnostics" }
logos = "0.16"
rowan = "0.16"

[dev-dependencies]
insta = "1"
