[package]
name = "assura-parser"
description = "Lexer, parser, and AST for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-ast = { version = "0.2.0", path = "../assura-ast" }
assura-diagnostics = { version = "0.2.0", path = "../assura-diagnostics" }
logos = "0.16"
rowan = "0.16"

[dev-dependencies]
insta = "1"
