[package]
name = "assura-pipeline"
description = "Shared compiler pipeline for the Assura language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-smt = { path = "../assura-smt" }
assura-codegen = { path = "../assura-codegen" }
assura-config = { path = "../assura-config" }
assura-diagnostics = { path = "../assura-diagnostics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assura-test-support = { path = "../assura-test-support" }
assura-smt = { path = "../assura-smt" }
