[package]
name = "assura-pipeline"
description = "Shared compiler pipeline for the Assura language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-parser = { version = "0.3.0", path = "../assura-parser" }
assura-resolve = { version = "0.3.0", path = "../assura-resolve" }
assura-types = { version = "0.3.0", path = "../assura-types" }
assura-smt = { version = "0.3.0", path = "../assura-smt" }
assura-codegen = { version = "0.3.0", path = "../assura-codegen" }
assura-config = { version = "0.3.0", path = "../assura-config" }
assura-diagnostics = { version = "0.3.0", path = "../assura-diagnostics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
