[package]
name = "assura-resolve"
description = "Name resolution and symbol table for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-diagnostics = { path = "../assura-diagnostics" }
assura-stdlib = { path = "../assura-stdlib" }
assura-config = { path = "../assura-config" }
