[package]
name = "assura-resolve"
description = "Name resolution and symbol table for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-parser = { version = "0.2.0", path = "../assura-parser" }
assura-diagnostics = { version = "0.2.0", path = "../assura-diagnostics" }
assura-stdlib = { version = "0.2.0", path = "../assura-stdlib" }
assura-config = { version = "0.2.0", path = "../assura-config" }
