[package]
name = "assura-rust-analyzer"
description = "Parse inline contract annotations from Rust doc comments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
