[package]
name = "assura-server"
description = "gRPC and JSON-over-HTTP service for Assura verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "assura-server"
path = "src/main.rs"

[dependencies]
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-codegen = { path = "../assura-codegen" }
assura-smt = { path = "../assura-smt" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tokio-stream = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"

[build-dependencies]
tonic-build = "0.14"