[package]
name = "assura-server"
description = "gRPC and JSON-over-HTTP service for Assura verification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "assura-server"
path = "src/main.rs"

[dependencies]
assura-diagnostics = { path = "../assura-diagnostics" }
assura-parser = { path = "../assura-parser" }
assura-resolve = { path = "../assura-resolve" }
assura-types = { path = "../assura-types" }
assura-codegen = { path = "../assura-codegen" }
assura-smt = { path = "../assura-smt" }
assura-pipeline = { path = "../assura-pipeline" }
assura-config = { path = "../assura-config" }
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tokio-stream = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"

[build-dependencies]
tonic-prost-build = "0.14"