[package]
name = "assura-smt"
description = "SMT-based verification for Assura contracts via Z3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["z3-verify"]
z3-verify = ["dep:z3"]
cvc5-verify = ["dep:cvc5"]

[dependencies]
assura-ast = { path = "../assura-ast" }
assura-types = { path = "../assura-types" }
assura-config = { path = "../assura-config" }
z3 = { version = "0.20", optional = true }
cvc5 = { version = "0.4", optional = true, features = ["static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
sha2 = "0.11"

[dev-dependencies]
assura-pipeline = { path = "../assura-pipeline" }
assura-config = { path = "../assura-config" }
assura-resolve = { path = "../assura-resolve" }
assura-test-support = { path = "../assura-test-support" }
tempfile = "3"
