[package]
name = "assura-smt"
description = "SMT-based verification for Assura contracts via Z3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["z3-verify"]
z3-verify = ["dep:z3"]
cvc5-verify = ["dep:cvc5"]

[dependencies]
assura-ast = { version = "0.1.0", path = "../assura-ast" }
assura-types = { version = "0.1.0", path = "../assura-types" }
assura-config = { version = "0.1.0", path = "../assura-config" }
assura-parser = { version = "0.1.0", path = "../assura-parser" }
assura-resolve = { version = "0.1.0", path = "../assura-resolve" }
z3 = { version = "0.20", optional = true, features = ["gh-release"] }
cvc5 = { version = "0.4", optional = true, features = ["static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
