[package]
name = "assura-stdlib"
description = "Assura standard library contracts and prelude types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-parser = { path = "../assura-parser" }
