[package]
name = "assura-types"
description = "Type checking for the Assura contract language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
assura-parser = { version = "0.4.0", path = "../assura-parser" }
assura-resolve = { version = "0.4.0", path = "../assura-resolve" }
assura-config = { version = "0.4.0", path = "../assura-config" }
assura-diagnostics = { version = "0.4.0", path = "../assura-diagnostics" }

